prevent table caption from getting too narrow when table is empty

--- a/src/css/notes.css
+++ b/src/css/notes.css
@@ -1,6 +1,7 @@
 .notes table {
 	border-collapse: collapse;
 	margin: 0 2px;
+	min-width: calc(100% - 4px);
 }
 .notes caption {
 	margin: .5em;
